--- a/bug-tracker-frontend/public/index.html
+++ b/bug-tracker-frontend/public/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div col-md-12 style="float: right;">
+    <div>
         <title>Bug Tracker</title>
-        <button class="btn btn-primary" id="login">Login</button>
-        <button class="btn btn-primary" id="register">Register</button>
     </div>
 </head>
 <body>
