--- a/bug-tracker-frontend/public/index.html
+++ b/bug-tracker-frontend/public/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DefecTrak</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.png" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
     <div id="root"></div>
